// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritesContainer container matches the snapshot on error 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavoriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="abcd"
        />
        <h1>
          temp
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="Error"
      >
        <h1>
          Не удалось загрузить данные
        </h1>
      </div>
    </div>
  </div>,
]
`;

exports[`FavoritesContainer container matches the snapshot when favorites cities are loaded 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavoriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="abcd"
        />
        <h1>
          temp
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="WeatherInfo"
      >
        <div
          className="Info"
        >
          <h3>
            Ветер
          </h3>
          <h4>
            wind
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Облачность
          </h3>
          <h4>
            cloudiness
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Давление
          </h3>
          <h4>
            pressure
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Влажность
          </h3>
          <h4>
            humidity
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Координаты
          </h3>
          <h4>
            [location]
          </h4>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FavoritesContainer container matches the snapshot when favorites cities are loading 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavoriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="abcd"
        />
        <h1>
          temp
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="Loader"
      >
        <h1>
          Подождите, данные загружаются
        </h1>
        <div
          className="Spinner"
        />
      </div>
    </div>
  </div>,
]
`;
